@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Change shakeLint to be of type Maybe Lint, instead of Bool
     #50, add shakeArgsAccumulate
 0.10.10
     Improve Ninja --lint checking
